--- a/gb/23/7/11/n14032523.md
+++ b/gb/23/7/11/n14032523.md
@@ -1,17 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新闻看点】状告英军情五处 李贞驹何许人？</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032616-Untitled-1-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14032616-Untitled-1-600x400.jpg" />///image2=```diff
+- 军情五处007被告，李贞驹是间谍吗？亲口承认政治游说，她的活动能量有多大？（《新闻看点》提供）
+```
 <h6>军情五处007被告，李贞驹是间谍吗？亲口承认政治游说，她的活动能量有多大？（《新闻看点》提供）
 </h6>
 <hr>
-	<p>【大纪元2023年07月12日讯】干净世界和油管的各位新老朋友大家好，我是李沐阳，欢迎大家关注<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>。今天是美东时间7月11日星期二，亚太时间是7月12日星期三。</p>
-<p>今天（11日）有一个让人无法相信但真实发生的故事。被英国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%86%9B%E6%83%85%E4%BA%94%E5%A4%84.md#1">军情五处</a>视为“中共代理人”的华人女子<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9D%8E%E8%B4%9E%E9%A9%B9.md#1">李贞驹</a>，起诉人权被侵犯，要求还她清白。“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%86%9B%E6%83%85%E4%BA%94%E5%A4%84.md#1">军情五处</a>”究竟是怎样的机构？李贞驹究竟做了什么，她是如何一步步被贴上“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E9%97%B4%E8%B0%8D.md#1">中共间谍</a>”标签的呢？</p>
+	<p>【大纪元2023年07月12日讯】干净世界和油管的各位新老朋友大家好，我是李沐阳，欢迎大家关注新闻看点。今天是美东时间7月11日星期二，亚太时间是7月12日星期三。</p>
+<p>今天（11日）有一个让人无法相信但真实发生的故事。被英国军情五处视为“中共代理人”的华人女子李贞驹，起诉人权被侵犯，要求还她清白。“军情五处”究竟是怎样的机构？李贞驹究竟做了什么，她是如何一步步被贴上“中共间谍”标签的呢？</p>
 </p>
-<p><center><a class="gjw-iframe" title="军情五处007被告，李贞驹是间谍吗？亲口承认政治游说，她的活动能量有多大？【新闻看点 李沐阳】 " src="https://www.ganjingworld.com/zh-TW/embed/1g07u3cj8qdjm4IFXctod21p21l81c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
-<h2>状诉MI5 <ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9D%8E%E8%B4%9E%E9%A9%B9.md#1">李贞驹</a>讨要清白</h2>
-<p>今天（11日）有一个让人无法相信、但是真实发生的故事。一名被贴上了“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E9%97%B4%E8%B0%8D.md#1">中共间谍</a>”标签的华人女子Christine Lee李贞驹，起诉英国国内情报机构军情五处MI5涉嫌侵犯人权，要求还她清白。</p>
+<p><center><a class=></a><a href="https://d377tzsbzf1wvt.cloudfront.net/E1b7dwE7b"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a title="军情五处007被告，李贞驹是间谍吗？亲口承认政治游说，她的活动能量有多大？【新闻看点 李沐阳】 " src="https://www.ganjingworld.com/zh-TW/embed/1g07u3cj8qdjm4IFXctod21p21l81c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
+<h2>状诉MI5 李贞驹讨要清白</h2>
+<p>今天（11日）有一个让人无法相信、但是真实发生的故事。一名被贴上了“中共间谍”标签的华人女子Christine Lee李贞驹，起诉英国国内情报机构军情五处MI5涉嫌侵犯人权，要求还她清白。</p>
 <p>路透社报导，李贞驹的律师托尼·穆曼在今天的庭审中要求军情五处，披露为何向英国国会发出对她的警报，同时寻求未知具体数额的赔偿。穆曼告诉调查权法庭，军情五处发布的所谓干扰警告是“至少80年来”首次发布此类警报。</p>
 <p>穆曼表示，李贞驹在看到媒体报导她被“打成国家公敌”前，并不知道有这样的警报发出。穆曼认为，在没有任何事先定罪的情况下，李贞驹的“声誉受到了严重的公开攻击”。李贞驹声称自己是“国家行为的受害者”，需要保护自己的基本权利。</p>
 <p>从李贞驹和律师穆曼的说法看，他们并不认同军情五处的指控。换句话说，李贞驹自认为被冤枉了，遭受了不公正的对待，所以要求军情五处进行赔偿。</p>
@@ -75,49 +77,39 @@
 <p>2017年12月，中共侨办法律顾问团成立大会上，出席活动的李贞驹从政治游说和“一带一路”商机及法律两方面，分享了她的亲身经历和体会。她还亲口承认，通过民意影响英国立法实践，维护华侨合法权益，是她进行“政治游说的目的”。</p>
 <p>2013年，中共顶级官媒“人民网”英国频道专门开辟了“李贞驹专栏”。2012年列席广东省政协会议时，李贞驹还向时任广东省委书记汪洋提出了一份提案，建议“中小企业走出去”。</p>
 <p>2009年中共全国政协会议上，李贞驹对《中新网》表示，能够作为海外华人代表参加中共政协会议，“感到非常荣幸”。李贞驹当时表示，“在中国提升海外华人的声音，不仅对已经在国外扎根的华人群体有利，也会让中国通过千千万万的海外工作和生活的华人而拥有自己的国际声音，同时维持着他们与中国的联系”。</p>
-<p>以上就是今天跟大家分享的全部内容了。如果大家喜欢我的节目，请点赞留言。如果有意愿向我们捐助，在视频下方有捐助链接，大家也可以订阅<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>的会员节目。好了观众朋友，感谢您的收看，咱们明天再会。</p>
+<p>以上就是今天跟大家分享的全部内容了。如果大家喜欢我的节目，请点赞留言。如果有意愿向我们捐助，在视频下方有捐助链接，大家也可以订阅新闻看点的会员节目。好了观众朋友，感谢您的收看，咱们明天再会。</p>
 <p>《新闻看点》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/16/n14017698.md#1">【新闻看点】比尔?盖茨访华有代价 习想要AI？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/22/n14020978.md#1">【新闻看点】拜登为何奚落习近平 历史会重演？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/25/n14022474.md#1">【新闻看点】瓦格纳兵变平息？下步将发生什么</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/6/n14029789.md#1">【新闻看点】中共公布最低薪资 百姓惨况掩不住</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/16/n14017698.md#1">【新闻看点】比尔?盖茨访华有代价 习想要AI？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/22/n14020978.md#1">【新闻看点】拜登为何奚落习近平 历史会重演？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/25/n14022474.md#1">【新闻看点】瓦格纳兵变平息？下步将发生什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/7/6/n14029789.md#1">【新闻看点】中共公布最低薪资 百姓惨况掩不住</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/10/n10291663.md#1" target="_blank">林辉：热爱自由的北大“右派”之出局人生</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/23/n10928592.md#1" target="_blank">【视频】法轮功在俄罗斯 各行业学员身心受益</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/18/n10066904.md#1" target="_blank">信力建：谁抽去了中国人的脊梁？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/27/n3973738.md#1" target="_blank">净仁：通向人类生命的真正幸福</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/3/n14027022.md#1">【未解之谜】载入日本历史的“神仙水”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/26/n14022755.md#1">【古道人生】峨眉十七位师兄不敌一镖师妇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/7/n14029969.md#1">【未解之谜】深海探秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/2/n14026769.md#1">唐朝女尼预知名臣颜真卿命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031796.md#1">【环球直击】北约峰会在即 拜登抵达欧洲</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031870.md#1">【新唐人快报】北约峰会5大看点 全球紧盯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032151.md#1">【全球新闻】土耳其放行 瑞典加入北约再无障碍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031300.md#1">英国老翁在自家花园发现罕见粉色蚱蜢</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031245.md#1">布鲁姆一举成名 成终结大学招生平权背后推手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/9/n14031218.md#1">太阳风暴影响大气层 美17州本周可见北极光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/9/n14031186.md#1">邓伦遭封杀一年后再上热搜 被强制执行174万</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/9/n14031019.md#1">布莱德彼特33年来的外貌被做成影片转传</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/9/n14031173.md#1">林志玲未来回演艺圈？AKIRA：她想多待在家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/9/n14030904.md#1">2023台北电影奖揭奖 王柏杰陆小芬获封帝后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031401.md#1">汤姆汉克教子重道德、善良正派 妻子为他庆生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/7/n14030383.md#1">5种简单食材稳血糖 糖尿病人也可大啖美食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/6/n14029156.md#1">吃对食物帮你远离癌症！中医师列6类防癌食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/17/n14017973.md#1">疫情后结核病例上升 专家：打过疫苗也可能感染</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/8/n14030499.md#1">【车评】非凡宝马 非凡电车 BMW iX M60</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031385.md#1">2023下半年 美国房市有这些好消息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289654.md#1">【音乐】五月的希望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290106.md#1">【时事军事】共军真要去欧洲打仗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289679.md#1">2024年美国生活最昂贵和最便宜的十个州</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290122.md#1">演唱会中途不停要喝水 刘德华身体状况引担忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288874.md#1">胡歌首谈夫妻相处模式 大赞老婆付出很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289693.md#1">力压张若昀和胡歌 朱一龙获陆剧小生演技冠军</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290096.md#1">油管史上第一人 网红MrBeast频道订阅数破3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289755.md#1">张艺兴演唱会上为母亲庆生 一口误引全场笑声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290376.md#1">美国癌症协会：4成癌症病例与生活习惯有关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287768.md#1">物价上涨如何省钱？养成19个购物习惯超实用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285229.md#1">研究：咖啡有助于抵消与年龄有关的肌肉流失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281710.md#1">吸食大麻健康危害大 七招让你远离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289225.md#1">观赏奥运要小心 看错比赛肚子恐怕会胖一圈</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/11/n14032523.htm">【新闻看点】状告英军情五处 李贞驹何许人？</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032523.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/7/11/n14032523.htm">【新闻看点】状告英军情五处 李贞驹何许人？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/11/n14032523.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
